cmake_minimum_required(VERSION 3.28)
project(CPP_Primer_Plus_Chapter_7)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP_Primer_Plus_Chapter_7 main.cpp
        head.h
#        Code/07_01_calling.cpp
#        Code/07_02_protos.cpp
#        Code/07_03_twoArg.cpp
#        Code/07_04_lotto.cpp
#        Code/07_05_arrFun_1.cpp
#        Code/07_06_arrFun_2.cpp
        Code/07_07_arrFun_3.cpp)
